--- a/bibliography.bib
+++ b/bibliography.bib
@@ -37,7 +37,7 @@
 
 @misc{BurroniFiniteGeometryRepo,
   author  = {Burroni, Javier},
-  title   = {FiniteGeometry},
+  title   = {{FiniteGeometry}},
   year    = {2025},
   howpublished = {\url{https://github.com/jburroni/FiniteGeometry/tree/main/FiniteGeometry}},
   note    = {Accessed: 2025-06-20}
